# Healix

backend/: pyproject.toml
backend/src/: main.py
backend/src/middlewares/: exception_handlers.py
backend/src/modules/: llm.py  load_vectorstore.py  pdf_handlers.py
backend/src/routes/: ask_question.py  upload_pdfs.py
backend/src/test/: main.py
