[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.70",
    "langchain-google-genai>=2.1.8",
    "langchain-groq>=0.3.6",
    "loguru>=0.7.3",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "pypdf>=5.8.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.35.0",
]
